responsive overflow corrected

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ body{
 }
 .carousel_info{
   border: 2px solid #19226C;
-  height: calc(8rem - 2.2rem);
+  height: calc(7rem - 2.2rem);
 }
 .font_sm {
   font-style: normal;
@@ -86,7 +86,7 @@ body{
   height: 4rem;
   width: 4rem;
   font-size: 1.6rem;
-  border : .125rem solid var(--theme-navy-blue);
+  border : 0.125rem solid var(--theme-navy-blue);
   border-radius: 50%;
 
 
@@ -255,7 +255,7 @@ input[type="number"] {
 
 .perticipate_card{
   max-width: 32rem;
-  max-height: 14rem;
+  height: fit-content;
 }
 /* .participate_container img{
   object-fit: cover;
@@ -275,14 +275,18 @@ input[type="number"] {
 }
 .footer_pay_links{
   position: relative;
-  width: 50rem;
+  width: 100%;
   height: 5rem;
+}
+.footer_pay_links img{
+  height: auto;
+  width: 3rem;
 }
 fieldset{
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 50rem; 
+	width: 100%; 
 	height: 5rem; 
 	border: 2px solid  transparent; 
 	border-top-color: black; 
@@ -316,27 +320,33 @@ fieldset:nth-of-type(4){
   .lottery_ticket_banner {
     height: auto;
 }
+.compitition_left_section{
+  height: auto;
+}
+.btn_ticket_select{
+  height: 3.5rem;
+  width: 3.5rem;
+}
   .ticket_amount {
     width: 5rem;
     height: 5rem;
     font-size: 2rem;
-    border: 1px solid #D9D9D9;
+    /* border: 1px solid #D9D9D9; */
   }
   
   .arrow_up,
   .arrow_down {
-    width: 2rem;
-    height: 2rem;
-    font-size: 1rem;
-    color: #ffffff;
-    background: #ABABAB;
+    width: 1.5rem;
+    height: 1.5rem;
+    font-size: .5rem;
+    /* color: #ffffff;
+    background: #ABABAB; */
   
   }
   .quiz_options {
     text-align: center;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(1,1fr);
-    gap: 1rem;
   
   }
   .modal_alert{
@@ -353,19 +363,40 @@ fieldset:nth-of-type(4){
     grid-row: 2;
   }
   .about_product_section{
-  padding: 0 1rem;
+  padding: 0 .5rem;
+  text-align: justify;
+  }
+  .price_centerArea{
+    background-color: transparent;
   }
   /* perticipate slider start */
 .product_area{
   padding: .25rem;
 }
+.product-slider {
+  height: 23rem;
+}
 .participate_container{
-  gap: .1rem;
+  gap: .5rem;
   padding: 0vw;
 
 }
+.perticipate_card{
+  max-width: 15rem;
+}
+.perticipate_card .card-title{
+  font-size: .5rem;
+}
+.perticipate_card .card-text{
+  font-size: .6rem;
+
+}
+.perticipate_card .btn{
+  font-size: .5rem;
+}
 .support_area{
   padding:1rem 2rem;
+  text-align: center;
 }
 .prev_btn,.next_btn{
   /* visibility: hidden; */
@@ -373,6 +404,15 @@ fieldset:nth-of-type(4){
 }
 .footer_links{
   flex-direction: column;
-  gap: .5rem;  
+  gap: 0rem;  
+}
+.footer_pay_links a{
+  text-decoration: none;
+  padding: 0 .125rem;
+}
+.footer_pay_links img{
+  height: auto;
+  width: 1.5rem;
+  /* padding: 0 rem; */
 }
 }
